finish contact&portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,14 +179,18 @@ title {
         width: 100%;
         position: static;
         text-align: center;
-    
     }
-    .nav-item{
+    .nav-item {
         float: unset;
     }
     header {
         width: 100%;
         height: 50%;
         position: static;
+    }
+    .project-container{
+        width:100%;
+        margin-left:unset;
+        height: unset;
     }
 }
